--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "--- Simple task app using MongoDB.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "env-cmd /TaskApp/config/dev.env nodemon src/index.js"
   },
   "repository": {
     "type": "git",
@@ -24,6 +25,8 @@
     "mongodb": "^3.6.3",
     "mongoose": "^5.11.9",
     "multer": "^1.4.2",
+    "sharp": "^0.27.0",
     "validator": "^13.5.2"
-  }
+  },
+  "devDependencies": {}
 }
